--- a/src/assets/styles/huntease.styles.white.scss
+++ b/src/assets/styles/huntease.styles.white.scss
@@ -1190,6 +1190,21 @@ input {
   }
   @include desktop-lg {
   }
+  .notes {
+    .notes-text-area {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      height: 406px;
+      width: 620px;
+      background-color: #bbc8ff;
+      color: black;
+      border-radius: 10px;
+      border-color: none;
+      margin-top: 26px;
+      padding-left: 5px;
+    }
+  }
 
   .btn-clicked {
     height: 40px;
