--- a/src/assets/styles/huntease.styles.white.scss
+++ b/src/assets/styles/huntease.styles.white.scss
@@ -10,7 +10,7 @@ $navbar-height-lg: 30px;
 @import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700&display=swap");
 // --------- Importing FontAwesome for Icons
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/font-awesome.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;600;700&display=swap");
 // --------- VARIABLES
 $top-component-height: 345px;
 $bottom-component-height: 300px;
@@ -1334,11 +1334,11 @@ input {
   }
 
   .icon-call {
-    height: 45px;
-    width: 45px;
+    height: 40px;
+    width: 40px;
     border-radius: 15px;
     background-color: #26ec82;
-    margin-left: 120px;
+    margin-left: 140px;
     margin-right: 15px;
     display: flex;
     justify-content: center;
@@ -1390,7 +1390,6 @@ input {
       margin-bottom: 10px;
     }
     .firstBlock {
-      height: 270px;
       width: 460px;
       background-color: white;
 
