--- a/src/assets/styles/huntease.styles.white.scss
+++ b/src/assets/styles/huntease.styles.white.scss
@@ -812,6 +812,20 @@ span {
   margin: 10px;
   bottom: 0px;
 }
+.auth-input-large-error {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 43px;
+  width: 513px;
+  background-color: #e8edff;
+  color: #8ba3ff;
+  border-radius: 15px;
+  border: 2px solid red;
+  padding: 20px;
+  margin: 10px;
+  bottom: 0px;
+}
 .btn-choice-company {
   border-radius: 5px;
   margin: 10px;
@@ -840,7 +854,22 @@ span {
   color: #001134;
   border: 2px solid $huntease-main;
   display: flex;
-  align-content: center;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.btn-get-started:hover {
+  height: 43px;
+  width: 237px;
+  border-radius: 15px;
+  margin: 20px;
+  color: white;
+  border: 2px solid $huntease-main;
+  display: flex;
+  background-color: $huntease-main;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
 }
@@ -851,6 +880,14 @@ span {
   font-weight: $bold;
   font-family: $font;
   color: $huntease-main;
+}
+
+.btn-get-started-tex:hover {
+  text-align: center;
+  font-size: 14px;
+  font-weight: $bold;
+  font-family: $font;
+  color: white;
 }
 
 input:focus,
@@ -1317,7 +1354,7 @@ input {
   img {
     height: 80px;
     width: 80px;
-    border-radius: 15px;
+    border-radius: 25px;
     margin: 8px;
   }
   .icon {
@@ -1395,6 +1432,100 @@ input {
 
       border-radius: 25px;
       box-shadow: $shadow;
+    }
+
+    .firstBlock-leadinfos {
+      width: 460px;
+      background-color: white;
+      border-radius: 25px;
+      box-shadow: $shadow;
+      h3 {
+        font-size: 20px;
+        font-family: $font;
+        font-weight: $bold;
+        color: #0026bc;
+        text-align: left;
+        margin-left: 10px;
+        padding: 0px;
+        margin: 0px;
+      }
+      h4 {
+        font-size: 15px;
+        font-family: $font;
+        font-weight: $bold;
+        color: #8ba3ff;
+        text-align: left;
+        padding: 0px;
+        margin: 10px;
+        margin-left: 20px;
+      }
+
+      p {
+        font-size: 14px;
+        font-family: $font;
+        font-weight: $regular;
+        color: #8ba3ff;
+        margin-left: 10px;
+        margin-top: 0px;
+        margin-bottom: 10px;
+        text-align: left;
+        padding: 0px;
+        margin: 0px;
+      }
+      h5 {
+        font-size: 14px;
+        font-family: $font;
+        font-weight: $regular;
+        color: #8ba3ff;
+        margin: 40px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+      }
+    }
+    .leadStatus {
+      margin-left: 15px;
+      margin-top: 29px;
+      h4 {
+        font-size: 16px;
+        font-family: $font;
+        font-weight: $bold;
+        color: #8ba3ff;
+        text-align: left;
+        padding: 0px;
+        margin: 15px;
+      }
+      .lead-status {
+        height: 36px;
+        min-width: 50px;
+        margin: 8px;
+        padding: 13px;
+        font-size: 12px;
+        font-weight: $regular;
+        font-family: $font;
+        color: #8ba3ff;
+        background-color: #a8c4ff1c;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
+      .lead-status-active {
+        height: 36px;
+        min-width: 50px;
+        margin: 8px;
+        padding: 13px;
+        font-size: 12px;
+        font-weight: $regular;
+        font-family: $font;
+        color: #f7894d;
+        background-color: #f7894d3b;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
     }
     .call-section {
       bottom: 0;
